test2-2024-07-01.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.9226 seconds

  ----Wall Time----  ----Name----
    0.9205 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.8731 ( 94.6%)    Parse modules
    0.0021 (  0.2%)  Rest
    0.9226 (100.0%)  Total

{
  totalTime: 0.936,
  maxMemory: 164139008
}
